make seqsol tooltip transition instant and adapt styling

--- a/ncct/site/sequencing-solutions/instruments.html
+++ b/ncct/site/sequencing-solutions/instruments.html
@@ -1,92 +1,89 @@
 <section id="instruments">
-    <div class="bs4-container">
-        <div class="bs4-row bs4-justify-content-center">
-            <div class="bs4-col-10 bs4-offset-1">
-                <div class="section-title">
-                    <div class="bs4-h1 bs4-text-center">All major technologies under one roof!</div>
-                </div>
-
-                <div class="bs4-card-deck bs4-justify-content-center bs4-text-center">
-                    <div class="bs4-row bs4-mb-4 bs4-justify-content-center bs4-w-100">
-                        <div class="bs4-card bs4-border-0 b min-vw-auto bs4-w-100">
-                            <div
-                                class="bs4-card-header bg-ncct bs4-text-center bs4-text-white bs4-h4">
-                                Sequencers
-                            </div>
-
-                            <ul class="bs4-list-group bs4-text-center">
-                                <li class="bs4-list-group-item">Illumina NextSeq500<img
-                                    class="ncct-information-icon"
-                                    src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"
-                                    title="flexible mid-output sequencer"/></li>
-                                <li class="bs4-list-group-item">Illumina MiSeq<img
-                                    class="ncct-information-icon"
-                                    src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"
-                                    title="low-output sequencer"/></li>
-                                <li class="bs4-list-group-item">Illumina NovaSeq6000<img
-                                    class="ncct-information-icon"
-                                    src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"
-                                    title="production scale instrument"/></li>
-                                <li class="bs4-list-group-item">ONT MinION<img
-                                    class="ncct-information-icon"
-                                    src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"
-                                    title="low throughput long read sequencer"/></li>
-                                <li class="bs4-list-group-item">ONT PromethION<img
-                                    class="ncct-information-icon"
-                                    src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"
-                                    title="high throughput long-read sequencer
-"/></li>
-                                <li class="bs4-list-group-item">PacBio Sequel II<img
-                                    class="ncct-information-icon"
-                                    src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"
-                                    title="accurate long-read sequencer"/></li>
-                            </ul>
-                        </div>
-
-                        <div class="bs4-card">
-                            <div
-                                class="bs4-card-header bg-ncct bs4-text-center bs4-text-white bs4-h4">
-                                Sample Preparation Systems
-                            </div>
-
-                            <ul class="bs4-list-group bs4-text-center">
-                                <li class="bs4-list-group-item">Qiagen QIAcube<img
-                                    class="ncct-information-icon"
-                                    src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"
-                                    title="high throughput isolation"/></li>
-                                <li class="bs4-list-group-item">Agilent Bravo<img
-                                    class="ncct-information-icon"
-                                    src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"
-                                    title="production scale liquid handler"/></li>
-                                <li class="bs4-list-group-item">Qiagen QIASymphony<img
-                                    class="ncct-information-icon"
-                                    src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"
-                                    title="high throughput isolation"/></li>
-                                <li class="bs4-list-group-item">Tecan Fluent 780<img
-                                    class="ncct-information-icon"
-                                    src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"
-                                    title="high throughput liquid handler"/></li>
-                                <li class="bs4-list-group-item">MGISP-100<img
-                                    class="ncct-information-icon"
-                                    src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"
-                                    title="mid throughput liquid handler"/></li>
-                                <li class="bs4-list-group-item">10x Genomics<img
-                                    class="ncct-information-icon"
-                                    src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"
-                                    title="single cell emulsion preparation"/></li>
-                                <li class="bs4-list-group-item">Beckman Biomek i5<img
-                                    class="ncct-information-icon"
-                                    src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"
-                                    title="high throughput liquid handler"/></li>
-                                <li class="bs4-list-group-item">Beckman Biomek i7<img
-                                    class="ncct-information-icon"
-                                    src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598273"
-                                    title=" high throughput liquid handler"/></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
+  <div class="bs4-container">
+    <div class="bs4-row bs4-justify-content-center">
+      <div class="bs4-col-10 bs4-offset-1">
+        <div class="section-title">
+          <div class="bs4-h1 bs4-text-center">All major technologies under one roof!</div>
         </div>
+
+        <div class="bs4-card-deck bs4-justify-content-center bs4-text-center">
+          <div class="bs4-row bs4-mb-4 bs4-justify-content-center bs4-w-100">
+            <div class="bs4-card bs4-border-0 b min-vw-auto bs4-w-100">
+              <div class="bs4-card-header bg-ncct bs4-text-center bs4-text-white bs4-h4">
+                Sequencers
+              </div>
+
+              <ul class="bs4-list-group bs4-text-center">
+                <li class="bs4-list-group-item">Illumina NextSeq500<span class="ncct-tooltip"><img
+                    class="ncct-information-icon"
+                    src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"/><span
+                    class="ncct-tooltip-text">flexible mid-output sequencer</span></span></li>
+                <li class="bs4-list-group-item">Illumina MiSeq<span class="ncct-tooltip"><img
+                    class="ncct-information-icon"
+                    src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"/><span
+                    class="ncct-tooltip-text">low-output sequencer</span></span></li>
+                <li class="bs4-list-group-item">Illumina NovaSeq6000<span class="ncct-tooltip"><img
+                    class="ncct-information-icon"
+                    src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"/><span
+                    class="ncct-tooltip-text">production scale instrument</span></span></li>
+                <li class="bs4-list-group-item">ONT MinION<span class="ncct-tooltip"><img
+                    class="ncct-information-icon"
+                    src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"/><span
+                    class="ncct-tooltip-text">low throughput long read sequencer</span></span></li>
+                <li class="bs4-list-group-item">ONT PromethION<span class="ncct-tooltip"><img
+                    class="ncct-information-icon"
+                    src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"/> <span
+                    class="ncct-tooltip-text">high throughput long-read sequencer</span></span></li>
+                <li class="bs4-list-group-item">PacBio Sequel II<span class="ncct-tooltip"><img
+                    class="ncct-information-icon"
+                    src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"/><span
+                    class="ncct-tooltip-text">accurate long-read sequencer</span></span></li>
+              </ul>
+            </div>
+
+            <div class="bs4-card">
+              <div class="bs4-card-header bg-ncct bs4-text-center bs4-text-white bs4-h4">Sample
+                Preparation Systems
+              </div>
+
+              <ul class="bs4-list-group bs4-text-center">
+                <li class="bs4-list-group-item">Qiagen QIAcube<span class="ncct-tooltip"><img
+                    class="ncct-information-icon"
+                    src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"/><span
+                    class="ncct-tooltip-text">high throughput isolation</span></span></li>
+                <li class="bs4-list-group-item">Agilent Bravo<span class="ncct-tooltip"><img
+                    class="ncct-information-icon"
+                    src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"/><span
+                    class="ncct-tooltip-text">production scale liquid handler</span></span></li>
+                <li class="bs4-list-group-item">Qiagen QIASymphony<span class="ncct-tooltip"><img
+                    class="ncct-information-icon"
+                    src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"/><span
+                    class="ncct-tooltip-text">high throughput isolation</span></span></li>
+                <li class="bs4-list-group-item">Tecan Fluent 780<span class="ncct-tooltip"><img
+                    class="ncct-information-icon"
+                    src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"/><span
+                    class="ncct-tooltip-text">high throughput liquid handler</span></span></li>
+                <li class="bs4-list-group-item">MGISP-100<span class="ncct-tooltip"><img
+                    class="ncct-information-icon"
+                    src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"/><span
+                    class="ncct-tooltip-text">mid throughput liquid handler</span></span></li>
+                <li class="bs4-list-group-item">10x Genomics<span class="ncct-tooltip"><img
+                    class="ncct-information-icon"
+                    src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"/><span
+                    class="ncct-tooltip-text">single cell emulsion preparation</span></span></li>
+                <li class="bs4-list-group-item">Beckman Biomek i5<span class="ncct-tooltip"><img
+                    class="ncct-information-icon"
+                    src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"/><span
+                    class="ncct-tooltip-text">high throughput liquid handler</span></span></li>
+                <li class="bs4-list-group-item">Beckman Biomek i7<span class="ncct-tooltip"><img
+                    class="ncct-information-icon"
+                    src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"/><span
+                    class="ncct-tooltip-text">high throughput liquid handler</span></span></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
 </section>
