--- a/ncct/site/sequencing-solutions/methods.html
+++ b/ncct/site/sequencing-solutions/methods.html
@@ -1,129 +1,127 @@
 <section id="sequencing-methods">
-    <div class="bs4-container">
-        <div class="bs4-row bs4-justify-content-center">
-            <div class="bs4-col-10 bs4-offset-1">
-                <div class="section-title">
-                    <div class="bs4-h1 bs4-text-center">Sequencing Methods</div>
-                </div>
-
-                <div class="bs4-card-columns four-columns">
-                    <div class="bs4-card bs4-border-0">
-                        <div class="bs4-card-header bg-ncct bs4-text-left bs4-text-white bs4-h4">
-                            Variant Detection
-                        </div>
-
-                        <ul class="bs4-list-group bs4-text-left">
-                            <li class="bs4-list-group-item">Whole Genome sequencing <img
-                                class="ncct-information-icon"
-                                src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"
-                                title="Sequencing of the whole genome of an organism, including coding and non-coding regions"/>
-                            </li>
-                            <li class="bs4-list-group-item">Long-Read sequencing <img
-                                class="ncct-information-icon"
-                                src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"
-                                title="Sequencing of long inserts of DNA allowing better mapping and phasing of the genome"/>
-                            </li>
-                            <li class="bs4-list-group-item">Panel sequencing <img
-                                class="ncct-information-icon"
-                                src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"
-                                title="In depth sequencing of a particular set of DNA regions using panels"/>
-                            </li>
-                            <li class="bs4-list-group-item">Exome sequencing<img
-                                class="ncct-information-icon"
-                                src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"
-                                title="Sequencing of all protein coding regions of the genome of an organism"/>
-                            </li>
-                            <li class="bs4-list-group-item">Targeted RNA sequencing<img
-                                class="ncct-information-icon"
-                                src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"
-                                title="Sequencing of a subset of transcripts enabling both qualitative and quantitative expression analysis"/>
-                            </li>
-                        </ul>
-                    </div>
-
-                    <div class="bs4-card bs4-border-0 min-vw-auto bs4-w-100">
-                        <div class="bs4-card-header bg-ncct bs4-center bs4-text-white bs4-h4">
-                            Expression Analysis
-                        </div>
-
-                        <ul class="bs4-list-group bs4-text-left">
-                            <li class="bs4-list-group-item">mRNA sequencing <img
-                                class="ncct-information-icon"
-                                src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"
-                                title="Sequencing of all messenger RNA transcripts which provides information on the whole coding transcriptome of an organism"/>
-                            </li>
-                            <li class="bs4-list-group-item">Total RNA sequencing <img
-                                class="ncct-information-icon"
-                                src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"
-                                title="Sequencing of all types of RNAs present, including diverse small and non-coding RNAs"/>
-                            </li>
-                            <li class="bs4-list-group-item">3'-Sequencing <img
-                                class="ncct-information-icon"
-                                src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"
-                                title="Sequencing of transcripts 3’ UTR allowing gene expression analysis with high sensitivity and in degraded sample"/>
-                            </li>
-                            <li class="bs4-list-group-item">scRNA sequencing <img
-                                class="ncct-information-icon"
-                                src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"
-                                title="Sequencing the RNA of individual cells to capture cell heterogeneity"/>
-                            </li>
-                            <li class="bs4-list-group-item">miRNA sequencing <img
-                                class="ncct-information-icon"
-                                src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"
-                                title="Sequencing of micro RNAs which confer gene silencing and are often associated with various cellular mechanisms"/>
-                            </li>
-                            <li class="bs4-list-group-item">smallRNA sequencing <img
-                                class="ncct-information-icon"
-                                src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"
-                                title="Sequencing of small RNAs (including micro RNA) which exert diverse functions of gene regulation"/>
-                            </li>
-                            <li class="bs4-list-group-item"><span>long-Read RNA sequencing <img
-                                class="ncct-information-icon"
-                                src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"
-                                title="Sequencing of full-length RNA allowing precise isoform detection"/></span>
-                            </li>
-                        </ul>
-                    </div>
-
-                    <div class="bs4-card bs4-border-0 min-vw-auto bs4-w-100">
-                        <div class="bs4-card-header bg-ncct bs4-text-left bs4-text-white bs4-h4">
-                            Metagenomics
-                        </div>
-
-                        <ul class="bs4-list-group bs4-text-left">
-                            <li class="bs4-list-group-item">Shotgun Metagenomics <img
-                                class="ncct-information-icon"
-                                src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"
-                                title="Sequencing of all genomic information of a sample containing DNA of a community of organisms"/>
-                            </li>
-                            <li class="bs4-list-group-item">16S/Amplicon Sequencing <img
-                                class="ncct-information-icon"
-                                src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"
-                                title="Sequencing of the 16S rRNA coding region to identify different taxa in a sample containing DNA of diverse organisms"/>
-                            </li>
-                            <li class="bs4-list-group-item">Metatranscriptomics <img
-                                class="ncct-information-icon"
-                                src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"
-                                title="Sequencing of the RNA in a heterogenous sample to analyse gene expression in a community of organisms"/>
-                            </li>
-                        </ul>
-                    </div>
-
-                    <div class="bs4-card bs4-border-0 min-vw-auto bs4-w-100">
-                        <div class="bs4-card-header bg-ncct bs4-text-left bs4-text-white bs4-h4">
-                            Epigenomics
-                        </div>
-
-                        <ul class="bs4-list-group bs4-text-left">
-                            <li class="bs4-list-group-item">Whole genome bisulfite sequencing <img
-                                class="ncct-information-icon"
-                                src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"
-                                title="Investigation of the methylation pattern in the whole genome of an organism"/>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
+  <div class="bs4-container">
+    <div class="bs4-row bs4-justify-content-center">
+      <div class="bs4-col-10 bs4-offset-1">
+        <div class="section-title">
+          <div class="bs4-h1 bs4-text-center">Sequencing Methods</div>
         </div>
+
+        <div class="bs4-card-columns four-columns">
+          <div class="bs4-card bs4-border-0">
+            <div class="bs4-card-header bg-ncct bs4-text-left bs4-text-white bs4-h4">Variant
+              Detection
+            </div>
+
+            <ul class="bs4-list-group bs4-text-left">
+              <li class="bs4-list-group-item">Whole Genome sequencing <span
+                  class="ncct-tooltip"><img class="ncct-information-icon"
+                                            src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"/><span
+                  class="ncct-tooltip-text">Sequencing of the whole genome of an organism, including coding and non-coding regions</span></span>
+              </li>
+              <li class="bs4-list-group-item">Long-Read sequencing <span class="ncct-tooltip"><img
+                  class="ncct-information-icon"
+                  src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"/><span
+                  class="ncct-tooltip-text">Sequencing of long inserts of DNA allowing better mapping and phasing of the genome</span></span>
+              </li>
+              <li class="bs4-list-group-item">Panel sequencing <span class="ncct-tooltip"><img
+                  class="ncct-information-icon"
+                  src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"/><span
+                  class="ncct-tooltip-text">In depth sequencing of a particular set of DNA regions using panels</span></span>
+              </li>
+              <li class="bs4-list-group-item">Exome sequencing <span class="ncct-tooltip"><img
+                  class="ncct-information-icon"
+                  src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"/><span
+                  class="ncct-tooltip-text">Sequencing of all protein coding regions of the genome of an organism</span></span>
+              </li>
+              <li class="bs4-list-group-item">Targeted RNA sequencing <span
+                  class="ncct-tooltip"><img class="ncct-information-icon"
+                                            src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"/><span
+                  class="ncct-tooltip-text">Sequencing of a subset of transcripts enabling both qualitative and quantitative expression analysis</span></span>
+              </li>
+            </ul>
+          </div>
+
+          <div class="bs4-card bs4-border-0 min-vw-auto bs4-w-100">
+            <div class="bs4-card-header bg-ncct bs4-center bs4-text-white bs4-h4">Expression
+              Analysis
+            </div>
+
+            <ul class="bs4-list-group bs4-text-left">
+              <li class="bs4-list-group-item">mRNA sequencing <span class="ncct-tooltip"><img
+                  class="ncct-information-icon"
+                  src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"/><span
+                  class="ncct-tooltip-text">Sequencing of all messenger RNA transcripts which provides information on the whole coding transcriptome of an organism</span></span>
+              </li>
+              <li class="bs4-list-group-item">Total RNA sequencing <span class="ncct-tooltip"><img
+                  class="ncct-information-icon"
+                  src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"/><span
+                  class="ncct-tooltip-text">Sequencing of all types of RNAs present, including diverse small and non-coding RNAs</span></span>
+              </li>
+              <li class="bs4-list-group-item">3'-Sequencing <span class="ncct-tooltip"><img
+                  class="ncct-information-icon"
+                  src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"/><span
+                  class="ncct-tooltip-text">Sequencing of transcripts 3’ UTR allowing gene expression analysis with high sensitivity and in degraded sample</span></span>
+              </li>
+              <li class="bs4-list-group-item">scRNA sequencing <span class="ncct-tooltip"><img
+                  class="ncct-information-icon"
+                  src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"/><span
+                  class="ncct-tooltip-text"> Sequencing the RNA of individual cells to capture cell heterogeneity</span></span>
+              </li>
+              <li class="bs4-list-group-item">miRNA sequencing <span class="ncct-tooltip"><img
+                  class="ncct-information-icon"
+                  src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"/><span
+                  class="ncct-tooltip-text">Sequencing of micro RNAs which confer gene silencing and are often associated with various cellular mechanisms</span></span>
+              </li>
+              <li class="bs4-list-group-item">smallRNA sequencing <span class="ncct-tooltip"><img
+                  class="ncct-information-icon"
+                  src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"/><span
+                  class="ncct-tooltip-text">Sequencing of small RNAs (including micro RNA) which exert diverse functions of gene regulation</span></span>
+              </li>
+              <li class="bs4-list-group-item">Long-Read RNA sequencing <span
+                  class="ncct-tooltip"><img class="ncct-information-icon"
+                                            src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"/><span
+                  class="ncct-tooltip-text">Sequencing of full-length RNA allowing precise isoform detection</span></span>
+              </li>
+            </ul>
+          </div>
+
+          <div class="bs4-card bs4-border-0 min-vw-auto bs4-w-100">
+            <div class="bs4-card-header bg-ncct bs4-text-left bs4-text-white bs4-h4">Metagenomics
+            </div>
+
+            <ul class="bs4-list-group bs4-text-left">
+              <li class="bs4-list-group-item">Shotgun Metagenomics<span class="ncct-tooltip"><img
+                  class="ncct-information-icon"
+                  src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"/><span
+                  class="ncct-tooltip-text">Sequencing of all genomic information of a sample containing DNA of a community of organisms</span></span>
+              </li>
+              <li class="bs4-list-group-item">16S/Amplicon Sequencing <span
+                  class="ncct-tooltip"><img class="ncct-information-icon"
+                                            src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"/><span
+                  class="ncct-tooltip-text">Sequencing of the 16S rRNA coding region to identify different taxa in a sample containing DNA of diverse organisms</span></span>
+              </li>
+              <li class="bs4-list-group-item">Metatranscriptomics<span class="ncct-tooltip"><img
+                  class="ncct-information-icon"
+                  src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"/><span
+                  class="ncct-tooltip-text">Sequencing of the RNA in a heterogenous sample to analyse gene expression in a community of organisms</span></span>
+              </li>
+            </ul>
+          </div>
+
+          <div class="bs4-card bs4-border-0 min-vw-auto bs4-w-100">
+            <div class="bs4-card-header bg-ncct bs4-text-left bs4-text-white bs4-h4">Epigenomics
+            </div>
+
+            <ul class="bs4-list-group bs4-text-left">
+              <li class="bs4-list-group-item">Whole genome bisulfite sequencing <span
+                  class="ncct-tooltip"><img class="ncct-information-icon"
+                                            src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"/><span
+                  class="ncct-tooltip-text">Investigation of the methylation pattern in the whole genome of an organism</span></span>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
 </section>
